sumo/tests/sumo/extended/emitter/errors/routedist/missing_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'probability' is missing in definition of emitter/routedistelem 'emitter'.
Quitting (on error).
